# proyecto-ml

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.airflow  README.md  doccheck.py  docker-compose.airflow.yml  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters.yml
dags/: kedro_classification_dag.py  kedro_pipelines_dag.py  kedro_regression_dag.py
data/01_raw/: db_cardiabetes.csv  db_cardio.csv  db_diabetes.csv
mlruns/0/: meta.yaml
mlruns/723152446806154272/: meta.yaml
notebooks/: 01_business_understanding.ipynb  02_data_understanding.ipynb  03_data_preparation.ipynb  03b_reporting.ipynb
scripts/: airflow-init.sh  create_clustering_features.py
src/proyecto_ml/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/proyecto_ml/pipelines/classification/: __init__.py  nodes.py  pipeline.py
src/proyecto_ml/pipelines/clustering/: __init__.py  nodes.py  pipeline.py
src/proyecto_ml/pipelines/data_engineering/: nodes.py  pipeline.py
src/proyecto_ml/pipelines/data_science/: nodes.py  pipeline.py
src/proyecto_ml/pipelines/dataprep/: nodes.py  pipeline.py
src/proyecto_ml/pipelines/regression/: __init__.py  nodes.py  pipeline.py
src/proyecto_ml/pipelines/reporting/: nodes.py  pipeline.py
